--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -63,10 +63,17 @@ body
   #middle_part
     padding-left: 85px
     #sidebar
-      display: inline-block
+      float: left
       width: 200px
+      padding-right: 20px
+      #categories_menu
+        padding-top: 35px
+        a
+          background: #fbfff9 
+          &:hover
+            color: #000
     #content
-      display: inline-block
+      float: left
       width: 835px
       padding: 0px 0px 0px 0px
       margin: 30px 0px 0px 0px
