--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,8 +31,9 @@
         %param{ name: 'quality', value: 'high' }
       #middle_part
         #sidebar
-          %ul.nav.nav-pills.nav-stacked
-            %li= link_to 'test', ''
+          %ul#categories_menu.nav.nav-pills.nav-stacked
+            - @categories.each do |category|
+              %li= link_to category.name, category
         #content
           = yield
         .clear
