--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -1,2 +1,2 @@
-%h1 Main#index
-%p Find me in app/views/main/index.html.haml
+%h1 интернет-магазин "Эдем"
+= render '/products/list', { products: @products }
