--- a/app/assets/stylesheets/categories.css.sass
+++ b/app/assets/stylesheets/categories.css.sass
@@ -5,9 +5,10 @@ ul#products
   padding: 0px
   margin: 0px
   li
+    overflow: hidden
     display: inline-block
-    width: 200px
-    height: 245px
+    width: 190px
+    height: 333px
     border: solid 1px #ccc
     padding: 5px
     text-align: center
