--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -7,6 +7,7 @@
 
 @import "bootstrap"
 @import 'compass/reset'
+@import 'compass/css3'
 
 body
   background: #ecf9e7
@@ -155,3 +156,16 @@ body
         display: block
       a
         color: #CE5322
+#icons
+  position: relative
+#cart
+  position: absolute
+  top: -40px
+  left: -10px
+  background: #fff
+  padding: 15px
+  +border-radius(5px)
+  #cart_content
+    #to_cart_index
+      margin-top: 10px
+      text-decoration: none
