--- a/app/views/shared/_cart_content.html.haml
+++ b/app/views/shared/_cart_content.html.haml
@@ -7,6 +7,6 @@
       = t('cart.on_sum')
       = cart.price
       = t('cart.currency')
-    = link_to t('cart.go_to_cart'), cart_index_path, class: 'btn btn-success', id: "to_cart_index"
+    = link_to t('cart.go_to_cart'), cart_index_path, class: 'btn btn-info btn-sm', id: "to_cart_index"
   - else
     %p= t('cart.empty') 
