added text to main page

--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -1,2 +1,16 @@
-%h1 интернет-магазин "Эдем"
+%h1 Интернет-магазин "Эдем"
+%p
+  Принимаем заказы на срезку тюльпанов к 8 марта с 1 февраля 2016 года!!! Для сохранения указанных цен, необходимо произвести предоплату до 25 февраля 2016, количество предложений ограниченно!
+  %br
+  Можете приобрести тюльпаны к 8 марта россыпью, в букетах и корзинах. 
+
+%p
+  %ul
+    %li При заказе тюльпанов россыпью выберите понравившиеся сорта и укажите количество.  Далее оформите заказ, с указанием контактных данных, чтобы наш менеджер с вами связался.
+    %li При заказе букета или корзины выберите понравившийся вариант и укажите количество.
+    %li При заказе оригинального букета или корзины, то выберите понравившиеся Вам сорта и укажите количество, в графе Дополнительная информация укажите как оформить ваш букет или корзину.
+   
+%p
+  Если Вам необходима консультация или дополнительная информация, оставьте запрос в заказе или свяжитесь с нами по телефону 2-920-076 или 89507675682 , или напишите на электронную почту land-edem@mail.ru
+%br
 = render '/products/list', { products: @products }
