--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -1,16 +1,9 @@
 %h1 Интернет-магазин "Эдем"
 %p
-  Принимаем заказы на срезку тюльпанов к 8 марта с 1 февраля 2016 года!!! Для сохранения указанных цен, необходимо произвести предоплату до 25 февраля 2016, количество предложений ограниченно!
-  %br
-  Можете приобрести тюльпаны к 8 марта россыпью, в букетах и корзинах. 
-
+  В нашем интернет-магазине Вы можете приобрести рассаду однолетних цветов, многолетние травянистые растения и декоративные кустарники, комнатные растения, к 8 марта – свежесрезанные тюльпаны.
 %p
-  %ul
-    %li При заказе тюльпанов россыпью выберите понравившиеся сорта и укажите количество.  Далее оформите заказ, с указанием контактных данных, чтобы наш менеджер с вами связался.
-    %li При заказе букета или корзины выберите понравившийся вариант и укажите количество.
-    %li При заказе оригинального букета или корзины, то выберите понравившиеся Вам сорта и укажите количество, в графе Дополнительная информация укажите как оформить ваш букет или корзину.
-   
+  Рассада однолетних цветов, полученная из семенного материала исключительно лучших голландских сортов, имеет превосходные показатели и жизнестойкость. Мы выращиваем всеми любимые сорта и новинки мирового рынка. Предлагаем посадочный материал многолетних травянистых растений и декоративных кустарников из Голландии, Германии, Дании и Польши высокого качества, пригодный к выращиванию в наших климатических условиях. Широкий ассортимент растений порадует и любителей и профессионалов.
 %p
-  Если Вам необходима консультация или дополнительная информация, оставьте запрос в заказе или свяжитесь с нами по телефону 2-920-076 или 89507675682 , или напишите на электронную почту land-edem@mail.ru
+  Если Вам необходима консультация или дополнительная информация, оставьте запрос в заказе или свяжитесь с нами по телефону 2-920-076 или 8950-767-56-82, или напишите на электронную почту land-edem@mail.ru
 %br
 = render '/products/list', { products: @products }
